# LocalMind

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  predicoes.csv  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: config.yaml
configs/dataset/: csv_classif.yaml  synthetic_classif.yaml
configs/model/: mlp.yaml
configs/train/: default.yaml
lightning_logs/version_0/checkpoints/: epoch=9-step=660.ckpt
lightning_logs/version_1/: metrics.csv
lightning_logs/version_1/checkpoints/: epoch=2-step=99.ckpt
logs/eval_csv/: metrics.json  predicoes_com_rotulo.csv
logs/iazero/version_0/: metrics.csv
logs/iazero/version_0/checkpoints/: best-epoch09-valacc0.905.ckpt
logs/iazero/version_1/: hparams.yaml  metrics.csv
logs/iazero/version_1/checkpoints/: best-epoch09-valacc0.662.ckpt
models/export/: iazero.onnx  preprocess.json
notebooks/: README.md
outputs/2025-08-27/14-33-18/.hydra/: hydra.yaml
scripts/: evaluate.ps1  export_onnx.ps1  export_preprocess.ps1  make_dataset_csv.ps1  make_dataset_csv.py  predict.ps1  serve_onnx.ps1  train.ps1
src/iac_core/: __init__.py  client.py  evaluate.py  export_onnx.py  export_preprocess.py  predict.py  predict_csv.py  serve_onnx.py  train.py
src/iac_core.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/iac_core/data/: __init__.py  loader.py
src/iac_core/models/: __init__.py  mlp.py
src/iac_core/utils/: __init__.py  paths.py  seed.py
tests/: test_api.py  test_datamodule_shapes.py  test_model_forward.py  test_sanity.py
(+12 files in other folders)
